--- a/DevBlog/Sources/custom-css/custom.css
+++ b/DevBlog/Sources/custom-css/custom.css
@@ -11,3 +11,10 @@ h1 {
 .card-header {
     color: #3498db; /* Change this to your desired color */
 }
+
+.clamp-4-lines {
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
